# NyFlow

./: .gitignore  README.es.md  README.md  pyproject.toml  run.py  setenv.sh  setup.py
data_analysis/: agg_data_analysis.ipynb  analyze_minio.ipynb  preprocessing.py  time_batch_anañysis.ipynb  tip_data_analysis.ipynb
data_extraction/: cnn_index.py  download.py  get_parquets.ipynb  get_parquets2.ipynb  meteo_data.py
data_pipeline/: optionBox.py  pipeline.py  style.tcss  widgets.py
data_preprocessing/: asking_rent.py  column_transformation.py  fare_data.py  field_tranformations.py  hv_preprocessing.ipynb  landmarks.py  make_restaurant_geojson.py  optimize_raw_df.py  outlier_removal.ipynb  outlier_removal.py  preprocess.ipynb  preprocess.py  preprocessing.py  preprocessing_mod.py  prueba_duckdb.py  tip_data.py  tip_data_preprocessing.ipynb
data_preprocessing/outliers/: outlier_del.py  outliers.ipynb
docs/: outlier_removal_guide.md  raw_nyc_taxi_data.md  unified_nyc_taxi_data.md
minio/: minio-connect.sh  minio_spark.py
minio_utils/: __init__.py  minio_script.py  minio_spark.py
models/: .gitignore  TFT_darts.ipynb  TiDE_darts.ipynb  baseline.ipynb  best_model.pth  best_taxi_model.pth  fare_lgbm_model.ipynb  lstm_model.ipynb  predicciones_taxis_nyc.csv  tft_in_real_data.ipynb  tft_model_explanation.ipynb  tide_model.ipynb  tip_lgbm_model.ipynb  tip_mdn_model.ipynb  tip_model_distance.ipynb  tip_prediction_model.ipynb
models/final_models/: .gitignore  amount_model_train.ipynb  demand_model_train.ipynb  distance_model_train.ipynb  model_selection.ipynb
models/model_objects_tip/: mdn_opt_['distance', 'direction', 'trip_duration_min'].pth  mdn_opt_['distance', 'direction', 'trip_duration_min']_params.json
models/model_objects_tip_lgbm/: 1stfase_classif_tip.txt
models/predictor/: local_data_prepare.ipynb  predictions.py  predictor.py
modules/minio/: __init__.py  minio_script.py  minio_spark.py
pipeline/: app.py  date_picker.py  pl_utils.py  run.py  selection_tree.py  style.tcss  widgets.py
propuesta/: project_idea.md
visualization/: test_api.py  test_api2.py  test_post.py
visualization/app/: main.py  (+2 more)
web-page/: about.html  faq.html  index.html  map.html  script.js  style.css
(+75 files in other folders)
