[project]
name = "pd2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dash>=3.4.0",
    "duckdb>=1.4.3",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pyspark>=4.1.1",
    "scikit-learn>=1.8.0",
    "textual>=7.4.0",
    "uvicorn>=0.40.0",
]

[build-backend]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visualization"]

[project.scripts]
visual = "visualization.app.main:main"
