[project]
name = "pd2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "clearml>=2.1.3",
    "dash>=3.4.0",
    "duckdb>=1.4.3",
    "fastapi>=0.128.0",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "loadenv>=0.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "nbformat>=5.10.4",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pyspark==3.5.5",
    "python-dotenv>=1.2.1",
    "rich>=14.3.1",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "textual>=7.4.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.40.0",
    "torch>=2.10.0",
    "ipywidgets>=8.1.8",
    "pyproj>=3.7.2",
    "lightgbm>=4.6.0",
    "optuna>=4.8.0",
]

[build-backend]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visualization"]

[project.scripts]
visual = "visualization.app.main:main"

[tool.setuptools]
packages = ["minio"]
